DDS extraction works now